Add create measurement endpoint
