# roots/employee.js
@@ -56,6 +56,25 @@ employeeRouter.get('/', function (req, res) {
     });
   });
 
+// Employees with their departments 
+employeeRouter.get('/departments', function (req, res) {
+    // connect to your database
+    sql.connect(config, function (err) {
+    
+        if (err) console.log(err);
+        // create Request object
+        var request = new sql.Request();
+           
+        // query to the database and get the records
+        request.query('SELECT * FROM Employee_With_Department', function (err, recordset) {
+            if (err) console.log(err)
+            // send records as a response
+            res.send(recordset.recordsets);
+            
+        });
+    });
+  });
+
   employeeRouter.get(`/:employeeID`, function (req, res) {
     // connect to your database
     sql.connect(config, function (err) {
