# server.js
@@ -8,12 +8,14 @@ const employeeRouter = require('./roots/employee')
 const departmentRouter = require('./roots/department');
 const measurementRouter = require('./roots/measurements');
 const testRouter = require('./roots/tests');
+const carRouter = require('./roots/car');
 
 // use routers
 app.use('/employees', employeeRouter)
 app.use('/departments', departmentRouter)
 app.use('/measurements', measurementRouter)
 app.use('/tests', testRouter)
+app.use('/cars', carRouter)
 
 const options = {
     definition: {
